# aprMaqI_CEIA

./: README.md  pyproject.toml
clase2/jupyter_notebooks/: 1 - Medidas de distancia.ipynb  2 - Clasificacion.ipynb  3 - Hiper-parametros.ipynb  4 - Optimizacion bayesiana.ipynb  5 - Framework Optuna.ipynb
clase3/ejercicios/: Ejercicios.md
clase3/jupyter_notebooks/: 1 - SVM (Clasificacion).ipynb  2 - Caso práctico.ipynb  3 - SVM (Regresion).ipynb
clase4/jupyter_notebooks/: trees.ipynb
clase5/: README.md
clase5/jupyter_notebooks/: bagging_boosting.ipynb  ensamble.ipynb
clase6/: README.md
clase6/ejercicios/: Ejercicios.md
clase6/jupyter_notebooks/: ads_crt.ipynb  calibration.ipynb
clase7/: README.md
clase7/ejercicios/: Ejercicios.md
clase7/jupyter_notebooks/: cluster.ipynb  pred_streng_example.ipynb
